--- a/useStateExercises/src/index.css
+++ b/useStateExercises/src/index.css
@@ -54,6 +54,17 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.list{
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.strikeThrough{
+  text-decoration: line-through;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
